[package]
name = "hasher"
version = "0.1.0"
authors = ["vedran <vinkovedran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha1 = "0.6.0"
yew = "0.17.2"
wasm-bindgen = "0.2.65"